Today I worked on my home page with my name and 'personal website', I also started working on the begin button and the Java Script for it but it's not scrolling the amount I want it to so I will have to work on that next class

--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html>
-    
-  <head>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Slanted Rectangle</title>
     <link rel="stylesheet" href="styles.css">
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+</head>
 
-  <body>
+<body>
+    <div class="container">
+        <div class="personal">Personal</div>
+        <div class="rectangle">
+            <span class="claire">Claire</span>
+        </div>
+        <div class="website">Website</div>
+        <button class="begin-button" onclick="scrollToContent()">Begin</button>
+    </div>
+    <div class="additional-content" id="additional-content">
+        <p>test</p>
+    </div>
+    <script src="script.js"></script>
+</body>
 
-   
-    <h1>My personal web site.</h1>
-    <p>Hello, world!</p>
-      
-
-
-  </body>
 </html>
